fix: allow font dropdown to overflow accordion body (overflow: visible when open)

--- a/modules/mugeditor/views/css/mugeditor.css
+++ b/modules/mugeditor/views/css/mugeditor.css
@@ -230,6 +230,7 @@
   max-height: 2000px;
   padding: 18px;
   opacity: 1;
+  overflow: visible;
   transition: max-height 1s cubic-bezier(.25,.1,.25,1), padding .5s ease, opacity .6s ease .15s;
 }
 
